// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block reducer should set the capacity 1`] = `
Object {
  "capacity": 20,
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the created flag 1`] = `
Object {
  "capacity": "",
  "created": true,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the description 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "new description",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the end date 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "January 1, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the end time 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "13:45",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the has changes 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": true,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the not going responses 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": true,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the settings open 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": true,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the start date 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "January 1, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the start time 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "13:45",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp capacity 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": 20,
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp description 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "new description",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp end date 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "January 1, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp end date object 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": 2018-01-01T00:00:00.000Z,
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp end time 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "13:45",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp not going responses 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": true,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp start date 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "January 1, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp start date object 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-01-01T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp start time 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "13:45",
  "tempTitle": "",
  "title": "",
}
`;

exports[`RSVP block reducer should set the temp title 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "new title",
  "title": "",
}
`;

exports[`RSVP block reducer should set the title 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "hasChanges": false,
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "tempCapacity": "",
  "tempDescription": "",
  "tempEndDate": "July 19, 2018",
  "tempEndDateObj": 2018-07-19T00:00:00.000Z,
  "tempEndTime": "19:30",
  "tempNotGoingResponses": false,
  "tempStartDate": "July 19, 2018",
  "tempStartDateObj": 2018-07-19T00:00:00.000Z,
  "tempStartTime": "19:30",
  "tempTitle": "",
  "title": "new title",
}
`;
